--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!---------------  Font Aewsome  --------------------->
+    <!-- ---- ----  Font Aewsome  ---- ---- -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
@@ -13,15 +13,22 @@
       referrerpolicy="no-referrer"
     />
 
-    <!---------------  Chart JS  --------------------->
+    <!-- ---- ---- Chart JS ---- ---- -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
-    <!---------------  Chart JS Plugin  --------------------->
+    <!-- ---- ---- Chart JS Plugin ---- ---- -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-datalabels/2.1.0/chartjs-plugin-datalabels.min.js"></script>
 
     <title>Lucky Wheel</title>
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
+    <h1>Lucky Wheel</h1>
+    <div class="wheel_box">
+      <canvas id="spinWheel"></canvas>
+      <button id="spin_btn">Spin</button>
+      <i class="fa-solid fa-location-arrow"></i>
+    </div>
+    <div id="text"><p>Wheel of Fortune</p></div>
     <script src="app.js"></script>
   </body>
 </html>
