--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
   </head>
   <body>
     <h1>Lucky Wheel</h1>
-    <div class="wheel_box">
-      <canvas id="spinWheel"></canvas>
-      <button id="spin_btn">Spin</button>
-      <i class="fa-solid fa-location-arrow"></i>
+    <div class="container">
+      <div class="wheel_box">
+        <canvas id="spinWheel"></canvas>
+        <button id="spin_btn">Spin</button>
+        <i class="fa-solid fa-location-arrow"></i>
+      </div>
+      <div id="text"><p>Wheel of Fortune</p></div>
     </div>
-    <div id="text"><p>Wheel of Fortune</p></div>
     <script src="app.js"></script>
   </body>
 </html>
